--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:fitsSystemWindows="true">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 	<android.support.design.widget.AppBarLayout
-		android:id="@+id/app_bar_layout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-		android:fitsSystemWindows="true">
+		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 		<android.support.design.widget.CollapsingToolbarLayout
-			android:id="@+id/collapsing_toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			app:layout_scrollFlags="scroll|exitUntilCollapsed"
 			app:contentScrim="?attr/colorPrimary"
 			app:expandedTitleMarginStart="48dp"
-			app:expandedTitleMarginEnd="64dp"
-			android:fitsSystemWindows="true">
+			app:expandedTitleMarginEnd="64dp">
 
 			<ImageView
 				android:layout_width="match_parent"
-				android:layout_height="300dp"
-				android:fitsSystemWindows="true"
+				android:layout_height="240dp"
 				android:background="@android:color/white"
 				app:layout_collapseMode="parallax"/>
 
 			<android.support.v7.widget.Toolbar
-				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="?attr/actionBarSize"
 				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
