--- a/app/src/main/res/menu/browse_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/browse_bottom_nav_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-	  xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 		android:id="@+id/action_browse_tv_shows"
 		android:icon="@drawable/ic_tv_shows"
@@ -9,8 +8,4 @@
 		android:id="@+id/action_browse_movies"
 		android:icon="@drawable/ic_movie"
 		android:title="Movies"/>
-	<item
-		android:id="@+id/action_browse_recents"
-		android:icon="@drawable/ic_new_releases"
-		android:title="New"/>
 </menu>
