Add base DetailActivity with collapsible toolbar layout

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,35 +2,52 @@
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	tools:context="com.bonnetrouge.toonup.Activities.DetailActivity">
+
 	<android.support.design.widget.AppBarLayout
+		android:id="@+id/appBar"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="240dp"
+		android:fitsSystemWindows="true"
 		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 		<android.support.design.widget.CollapsingToolbarLayout
+			android:id="@+id/toolbar_layout"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			app:layout_scrollFlags="scroll|exitUntilCollapsed"
+			android:fitsSystemWindows="true"
 			app:contentScrim="?attr/colorPrimary"
-			app:expandedTitleMarginStart="48dp"
-			app:expandedTitleMarginEnd="64dp">
+			app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
 			<ImageView
+				android:id="@+id/parallaxImage"
 				android:layout_width="match_parent"
-				android:layout_height="240dp"
-				android:background="@android:color/white"
+				android:layout_height="match_parent"
 				app:layout_collapseMode="parallax"/>
-
 			<android.support.v7.widget.Toolbar
+				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="?attr/actionBarSize"
-				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-				app:layout_collapseMode="pin">
-			</android.support.v7.widget.Toolbar>
+				app:layout_collapseMode="pin"
+				app:popupTheme="@style/PopupOverlay"/>
 
 		</android.support.design.widget.CollapsingToolbarLayout>
-
 	</android.support.design.widget.AppBarLayout>
+
+	<include layout="@layout/content_detail"/>
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/fab_margin"
+		app:backgroundTint="@color/colorAccent"
+		app:layout_anchor="@id/appBar"
+		app:layout_anchorGravity="bottom|end"
+		app:srcCompat="@drawable/ic_favorite_unfilled"/>
+
 </android.support.design.widget.CoordinatorLayout>
