--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -42,6 +42,8 @@
 		android:id="@+id/detailsRecyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:paddingTop="24dp"
+		android:clipToPadding="false"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior"
 		tools:context="com.bonnetrouge.toonup.Activities.DetailActivity"
 		tools:showIn="@layout/activity_detail"/>
@@ -50,10 +52,11 @@
 		android:id="@+id/fab"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_gravity="center_vertical|left"
 		android:layout_margin="@dimen/fab_margin"
 		app:backgroundTint="@color/colorAccent"
-		app:layout_anchor="@id/appBar"
-		app:layout_anchorGravity="bottom|end"
+		app:layout_anchor="@+id/appBar"
+		app:layout_anchorGravity="bottom|right"
 		app:srcCompat="@drawable/ic_favorite_unfilled"/>
 
 </android.support.design.widget.CoordinatorLayout>
