--- a/app/src/main/res/layout/view_holder_detail.xml
+++ b/app/src/main/res/layout/view_holder_detail.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  xmlns:app="http://schemas.android.com/apk/res-auto"
 			  android:orientation="horizontal"
 			  android:layout_width="match_parent"
 			  android:layout_height="48dp">
 	<TextView
 		android:id="@+id/detail_item_title"
-		android:layout_width="match_parent"
+		android:layout_width="256dp"
 		android:layout_height="match_parent"
-		android:text="Quman"/>
+		android:ellipsize="end"
+		android:maxLines="1"
+		android:gravity="center_vertical"
+		android:layout_marginStart="24dp"/>
+	<Space
+		android:layout_weight="1"
+		android:layout_width="0dp"
+		android:layout_height="match_parent"/>
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:srcCompat="@drawable/ic_play_circle"
+		android:layout_gravity="center"/>
+	<Space
+		android:layout_weight="1"
+		android:layout_width="0dp"
+		android:layout_height="match_parent"/>
 </LinearLayout>
