--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context="com.bonnetrouge.toonup.Activities.PlayerActivity">
+	<com.google.android.exoplayer2.ui.SimpleExoPlayerView
+		android:id="@+id/exoPlayerView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
