--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/colorAccent">
@@ -9,29 +8,5 @@
 	<FrameLayout
 		android:id="@+id/browseFragmentContainer"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-	<android.support.design.widget.AppBarLayout
-		android:id="@+id/appBarLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<android.support.v7.widget.Toolbar
-			android:id="@+id/toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			app:layout_scrollFlags="scroll|enterAlways">
-		</android.support.v7.widget.Toolbar>
-
-	</android.support.design.widget.AppBarLayout>
-
-	<android.support.design.widget.BottomNavigationView
-		android:id="@+id/bottomNavView"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom"
-		app:itemBackground="@color/tertiaryColour"
-		app:menu="@menu/browse_bottom_nav_menu"/>
-
+		android:layout_height="match_parent"/>
 </android.support.design.widget.CoordinatorLayout>
