--- a/app/src/main/res/layout/fragment_browse_tv.xml
+++ b/app/src/main/res/layout/fragment_browse_tv.xml
@@ -4,6 +4,14 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
+	<TextView
+		android:id="@+id/errorMessage"
+		android:text="@string/connectivity_error_msg"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:layout_marginBottom="?attr/actionBarSize"
+		android:visibility="invisible"/>
 	<android.support.v4.widget.SwipeRefreshLayout
 		android:id="@+id/swipeRefreshLayout"
 		android:layout_width="match_parent"
