--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -5,5 +5,8 @@
 	<ImageView
 		android:id="@+id/bannerItemImage"
 		android:layout_width="90dp"
-		android:layout_height="160dp"/>
+		android:layout_height="160dp"
+		android:layout_margin="4dp"
+		android:scaleType="fitXY"
+		android:background="@color/thumbnailLoadingColour"/>
 </FrameLayout>
