--- a/app/src/main/res/layout/view_holder_banner.xml
+++ b/app/src/main/res/layout/view_holder_banner.xml
@@ -4,10 +4,11 @@
 										android:layout_height="wrap_content">
 	<TextView
 		android:id="@+id/bannerTitle"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/bannerRecyclerView"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		android:layout_below="@id/bannerTitle"/>
 </RelativeLayout>
