--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:layout_width="wrap_content"
-			 android:layout_height="wrap_content">
-	<ImageView
-		android:id="@+id/bannerItemImage"
-		android:layout_width="90dp"
-		android:layout_height="160dp"
-		android:layout_margin="4dp"
-		android:scaleType="fitXY"
-		android:background="@color/thumbnailLoadingColour"/>
-</FrameLayout>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+									android:layout_width="120dp"
+									android:layout_height="160dp">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+		<ImageView
+			android:id="@+id/bannerItemImage"
+			android:layout_width="match_parent"
+			android:layout_height="140dp"/>
+		<!--android:scaleType="fitXY"
+		android:background="@color/thumbnailLoadingColour"-->
+		<TextView
+			android:id="@+id/bannerItemTitle"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_weight="1"/>
+	</LinearLayout>
+</android.support.v7.widget.CardView>
