--- a/app/src/main/res/layout/fragment_browse_tv.xml
+++ b/app/src/main/res/layout/fragment_browse_tv.xml
@@ -1,39 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	android:layout_height="match_parent">
 	<TextView
 		android:id="@+id/errorMessage"
 		android:text="@string/connectivity_error_msg"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:gravity="center"
-		android:layout_marginBottom="?attr/actionBarSize"
 		android:visibility="invisible"/>
 	<android.support.v4.widget.SwipeRefreshLayout
 		android:id="@+id/swipeRefreshLayout"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		android:layout_height="match_parent">
 
 		<android.support.v7.widget.RecyclerView
 			android:id="@+id/tvRecyclerView"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"/>
 	</android.support.v4.widget.SwipeRefreshLayout>
-	<android.support.design.widget.AppBarLayout
-		android:id="@+id/appBarLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<android.support.v7.widget.Toolbar
-			android:id="@+id/toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			app:layout_scrollFlags="scroll|enterAlways">
-		</android.support.v7.widget.Toolbar>
-
-	</android.support.design.widget.AppBarLayout>
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
