--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-									android:layout_width="120dp"
-									android:layout_height="160dp">
+									android:layout_width="110dp"
+									android:layout_height="160dp"
+									android:layout_margin="4dp">
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -9,13 +10,16 @@
 		<ImageView
 			android:id="@+id/bannerItemImage"
 			android:layout_width="match_parent"
-			android:layout_height="140dp"/>
-		<!--android:scaleType="fitXY"
-		android:background="@color/thumbnailLoadingColour"-->
+			android:layout_height="120dp"
+			android:background="@color/thumbnailLoadingColour"
+			android:scaleType="fitXY"/>
 		<TextView
 			android:id="@+id/bannerItemTitle"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
-			android:layout_weight="1"/>
+			android:layout_weight="1"
+			android:maxLines="2"
+			android:textColor="@android:color/white"
+			android:ellipsize="end"/>
 	</LinearLayout>
 </android.support.v7.widget.CardView>
