--- a/app/src/main/res/layout/view_holder_banner.xml
+++ b/app/src/main/res/layout/view_holder_banner.xml
@@ -2,10 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 										android:layout_width="match_parent"
 										android:layout_height="wrap_content">
+
 	<TextView
 		android:id="@+id/bannerTitle"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="25dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:textAllCaps="true"
+		android:fontFamily="sans-serif-condensed"
+		android:textSize="18sp"/>
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/bannerRecyclerView"
 		android:layout_width="match_parent"
