WIP refactor UI for DetailActivity

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,6 +27,7 @@
 				android:id="@+id/parallaxImage"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
+				android:background="@color/black_tint"
 				app:layout_collapseMode="parallax"/>
 
 			<android.support.v7.widget.Toolbar
