--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,13 +21,14 @@
 			android:layout_height="match_parent"
 			android:fitsSystemWindows="true"
 			app:contentScrim="?attr/colorPrimary"
-			app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
+			app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 			<ImageView
 				android:id="@+id/parallaxImage"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:background="@color/black_tint"
+				android:foreground="@color/black_tint"
+				android:scaleType="centerCrop"
 				app:layout_collapseMode="parallax"/>
 
 			<android.support.v7.widget.Toolbar
@@ -45,10 +46,17 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:clipToPadding="false"
-		android:paddingTop="24dp"
+		android:paddingTop="8dp"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior"
 		tools:context="com.bonnetrouge.toonup.Activities.DetailActivity"
 		tools:showIn="@layout/activity_detail"/>
+	<TextView
+		android:id="@+id/errorMessage"
+		android:text="@string/connectivity_error_msg"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:visibility="invisible"/>
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fab"
