--- a/app/src/main/res/layout/view_holder_detail.xml
+++ b/app/src/main/res/layout/view_holder_detail.xml
@@ -3,26 +3,22 @@
 			  xmlns:app="http://schemas.android.com/apk/res-auto"
 			  android:orientation="horizontal"
 			  android:layout_width="match_parent"
-			  android:layout_height="48dp">
-	<TextView
-		android:id="@+id/detail_item_title"
-		android:layout_width="256dp"
-		android:layout_height="match_parent"
-		android:ellipsize="end"
-		android:maxLines="1"
-		android:gravity="center_vertical"
-		android:layout_marginStart="24dp"/>
-	<Space
-		android:layout_weight="1"
-		android:layout_width="0dp"
-		android:layout_height="match_parent"/>
+			  android:layout_height="wrap_content">
 	<ImageView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="36dp"
+		android:layout_height="36dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginBottom="8dp"
 		app:srcCompat="@drawable/ic_play_circle"
 		android:layout_gravity="center"/>
-	<Space
-		android:layout_weight="1"
+	<TextView
+		android:id="@+id/detail_item_title"
 		android:layout_width="0dp"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:ellipsize="end"
+		android:maxLines="1"
+		android:gravity="center_vertical"/>
 </LinearLayout>
