--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="thumbnailLoadingColour">#363636</color>
     <color name="transparent">#00ffffff</color>
     <color name="black_tint">#4c000000</color>
+    <color name="series_position">#7cffffff</color>
 </resources>
