--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -58,7 +58,7 @@
 		android:gravity="center"
 		android:visibility="invisible"/>
 
-	<android.support.design.widget.FloatingActionButton
+<!--	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fab"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -67,6 +67,6 @@
 		app:backgroundTint="@color/colorAccent"
 		app:layout_anchor="@+id/appBar"
 		app:layout_anchorGravity="bottom|right"
-		app:srcCompat="@drawable/ic_favorite_unfilled"/>
+		app:srcCompat="@drawable/ic_favorite_unfilled"/>-->
 
 </android.support.design.widget.CoordinatorLayout>
