--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -7,6 +7,7 @@
 	tools:context="com.bonnetrouge.toonup.Activities.PlayerActivity">
 	<com.google.android.exoplayer2.ui.SimpleExoPlayerView
 		android:id="@+id/exoPlayerView"
+		android:background="@android:color/black"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 
