Add gradient animation for category chooser

--- a/app/src/main/res/layout/fragment_category_chooser.xml
+++ b/app/src/main/res/layout/fragment_category_chooser.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  xmlns:app="http://schemas.android.com/apk/res-auto"
+			  android:id="@+id/rootChooserLayout"
 			  android:orientation="vertical"
+			  android:background="@drawable/gradient_animation_list"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent">
 	<RelativeLayout
