--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="tertiaryColour">#ff4400</color>
     <color name="thumbnailLoadingColour">#363636</color>
     <color name="transparent">#00ffffff</color>
+    <color name="dark_transparent">#3c000000</color>
     <color name="black_tint">#4c000000</color>
     <color name="series_position">#7cffffff</color>
 </resources>
