--- a/app/src/main/res/layout/banner_item.xml
+++ b/app/src/main/res/layout/banner_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-									android:layout_width="105dp"
-									android:layout_height="160dp"
-									android:layout_margin="4dp">
+<android.support.v7.widget.CardView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:card_view="http://schemas.android.com/apk/res-auto"
+	android:layout_width="105dp"
+	android:layout_height="160dp"
+	android:layout_margin="4dp"
+	card_view:cardBackgroundColor="@color/transparent" >
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -11,7 +14,6 @@
 			android:id="@+id/bannerItemImage"
 			android:layout_width="match_parent"
 			android:layout_height="120dp"
-			android:background="@color/thumbnailLoadingColour"
 			android:scaleType="fitXY"/>
 
 		<TextView
@@ -23,6 +25,7 @@
 			android:fontFamily="serif"
 			android:gravity="center"
 			android:maxLines="2"
+			android:background="@color/dark_transparent"
 			android:textColor="@android:color/white"/>
 	</LinearLayout>
 </android.support.v7.widget.CardView>
