--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -16,6 +16,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:visibility="gone"
+			android:maxLines="1"
+			android:inputType="text"
 			android:scaleX="0"
 			android:layout_marginEnd="8dp"/>
 	</android.support.v7.widget.Toolbar>
