--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#161616</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#2d2d2d</color>
+    <color name="colorAccent">#ffd4f5</color>
     <color name="bottomNavItemsColour">@android:color/white</color>
     <color name="tertiaryColour">#ff4400</color>
     <color name="thumbnailLoadingColour">#50000000</color>
