--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/rootBackground"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -11,15 +12,30 @@
 		android:background="@color/dark_transparent"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize">
-		<EditText
-			android:id="@+id/searchEditText"
+		<LinearLayout
+			android:id="@+id/searchTextContainer"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="?attr/actionBarSize"
 			android:visibility="gone"
-			android:maxLines="1"
-			android:inputType="text"
 			android:scaleX="0"
-			android:layout_marginEnd="8dp"/>
+			android:orientation="horizontal">
+			<EditText
+				android:id="@+id/searchEditText"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:maxLines="1"
+				android:inputType="text"/>
+			<ImageView
+				android:id="@+id/clearIcon"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:visibility="invisible"
+				android:layout_marginEnd="8dp"
+				android:layout_marginStart="8dp"
+				app:srcCompat="@drawable/ic_clear"/>
+		</LinearLayout>
 	</android.support.v7.widget.Toolbar>
 	<FrameLayout
 		android:id="@+id/browseFragmentContainer"
