--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -30,7 +30,7 @@
 				android:id="@+id/clearIcon"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
+				android:layout_gravity="center"
 				android:visibility="invisible"
 				android:layout_marginEnd="8dp"
 				android:layout_marginStart="8dp"
