--- a/app/src/main/res/layout/fragment_category_chooser.xml
+++ b/app/src/main/res/layout/fragment_category_chooser.xml
@@ -10,6 +10,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1"
+		android:alpha="0.85"
 		android:layout_marginStart="24dp"
 		android:layout_marginEnd="24dp"
 		android:layout_marginTop="12dp"
@@ -35,6 +36,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1"
+		android:alpha="0.85"
 		android:layout_marginStart="24dp"
 		android:layout_marginEnd="24dp"
 		android:layout_marginTop="12dp"
@@ -61,6 +63,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1"
+		android:alpha="0.85"
 		android:layout_marginStart="24dp"
 		android:layout_marginEnd="24dp"
 		android:layout_marginTop="12dp"
