--- a/app/src/main/res/layout/view_holder_banner.xml
+++ b/app/src/main/res/layout/view_holder_banner.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-										android:layout_width="match_parent"
-										android:layout_height="wrap_content">
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content">
 
 	<TextView
 		android:id="@+id/bannerTitle"
 		android:layout_width="match_parent"
 		android:layout_height="25dp"
 		android:gravity="center_horizontal"
-		android:layout_marginTop="16dp"
-		android:layout_marginBottom="8dp"
+		android:layout_marginTop="20dp"
 		android:textAllCaps="true"
-		android:fontFamily="casual"
-		android:textSize="18sp"/>
-	<View
-		android:layout_width="match_parent"
-		android:layout_height="1dp"
-		android:layout_marginRight="24dp"
-		android:layout_marginLeft="24dp"
-		android:layout_below="@id/bannerTitle"
-		android:background="@android:color/white"/>
+		android:textSize="20sp"/>
+	<!--	<View
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:layout_marginRight="24dp"
+			android:layout_marginLeft="24dp"
+			android:layout_below="@id/bannerTitle"
+			android:background="@android:color/white"/>-->
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/bannerRecyclerView"
 		android:layout_marginTop="8dp"
