--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				xmlns:app="http://schemas.android.com/apk/res-auto">
+	<RelativeLayout
+		android:id="@+id/no_search_found_msg_container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="invisible">
+		<ImageView
+			android:id="@+id/no_search_found_img"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
+			android:layout_centerInParent="true"
+			app:srcCompat="@drawable/ic_sentiment_neutral"/>
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/no_search_found"
+			android:gravity="center"
+			android:textSize="14sp"
+			android:layout_below="@id/no_search_found_img"/>
+	</RelativeLayout>
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/searchRecyclerView"
 		android:layout_width="match_parent"
