--- a/app/src/main/res/layout-land/fragment_category_chooser.xml
+++ b/app/src/main/res/layout-land/fragment_category_chooser.xml
@@ -29,6 +29,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/tv_shows"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
@@ -56,6 +58,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/movies"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
@@ -83,6 +87,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/anime"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
