--- a/app/src/main/res/layout/fragment_category_chooser.xml
+++ b/app/src/main/res/layout/fragment_category_chooser.xml
@@ -28,6 +28,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/tv_shows"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
@@ -55,6 +57,8 @@
 			android:layout_height="wrap_content"
 			android:text="@string/movies"
 			android:layout_margin="16dp"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
@@ -82,6 +86,8 @@
 			android:layout_height="wrap_content"
 			android:text="@string/anime"
 			android:layout_margin="8dp"
+			android:fontFamily="serif-monospace"
+			android:textSize="16sp"
 			android:layout_gravity="center"
 			android:gravity="center_horizontal"/>
 	</LinearLayout>
