--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context="com.bonnetrouge.toonup.Activities.PlayerActivity">
+
 	<com.google.android.exoplayer2.ui.SimpleExoPlayerView
 		android:id="@+id/exoPlayerView"
 		android:background="@android:color/black"
@@ -16,4 +17,6 @@
 		android:layout_height="50dp"
 		android:layout_gravity="center"/>
 
-</FrameLayout>
+	<include layout="@layout/bottom_sheet_link_chooser"/>
+
+</android.support.design.widget.CoordinatorLayout>
